--- a/index.html
+++ b/index.html
@@ -5,11 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower</title>
+    <!-- css style  -->
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/4e7ae1d1f4.js" crossorigin="anonymous"></script>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+    <!-- section-1 -->
+    <section class="main-section-1">
 
+        <!-- section-1 -->
+        <section class="section-1">
+            <div class="section-1-1">
+                <div class="section-1-1-1">
+                    <h1>Let's make beautiful flowers a part of your life.</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                        distribution of letters.</p>
+                    <button class="btn-1">Shop Now</button>
+                </div>
+                <div class="section-1-1-2">
+                    <img src="Flower Asset/pngwing 10.png" alt="">
+                </div>
+            </div>
+        </section>
+
+    </section>
+
+
+    <!-- section-2 -->
+    <section class="section-2">
+
+    </section>
 </body>
 
 </html>
