--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
     <!-- section-2 -->
     <section class="section-2">
-
+        <h1>Our Featured Flowers</h1>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+            at its layout.</p>
     </section>
 </body>
 
