--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
             at its layout.</p>
     </section>
+
+    <section class="section-3">
+        <div class="section-3-1">
+            <div class="section-3-1-1"><img src="Flower Asset/pngwing 6.png" alt=""></div>
+            <div class="section-3-1-2"><img src="Flower Asset/pngwing 5.png" alt=""></div>
+            <div class="section-3-1-3"><img src="Flower Asset/pngwing 7.png" alt=""></div>
+        </div>
+    </section>
+
 </body>
 
 </html>
