--- a/index.html
+++ b/index.html
@@ -49,9 +49,16 @@
 
     <section class="section-3">
         <div class="section-3-1">
-            <div class="section-3-1-1"><img src="Flower Asset/pngwing 6.png" alt=""></div>
-            <div class="section-3-1-2"><img src="Flower Asset/pngwing 5.png" alt=""></div>
-            <div class="section-3-1-3"><img src="Flower Asset/pngwing 7.png" alt=""></div>
+            <div class="section-3-1-1">
+                <img src="Flower Asset/pngwing 6.png" alt="">
+
+            </div>
+            <div class="section-3-1-2">
+                <img src="Flower Asset/pngwing 5.png" alt="">
+            </div>
+            <div class="section-3-1-3">
+                <img src="Flower Asset/pngwing 7.png" alt="">
+            </div>
         </div>
     </section>
 
