--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             at its layout.</p>
     </section>
 
+
+    <!-- section-3 -->
     <section class="section-3">
         <div class="section-3-1">
             <div class="section-3-1-1">
