--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
         </div>
     </section>
 
+    <!-- section-4 -->
+    <section class="section-4">
+        <div class="section-4-1">
+            <div class="section-4-1-1">
+                <img src="Flower Asset/Group 57.png" alt="">
+                <h5>Same Day Delivery. Click & Collect.</h5>
+            </div>
+            <div class="section-4-1-2">
+                <img src="Flower Asset/Group 58.png" alt="">
+                <h5>Fresh Flowers. Local Growers.</h5>
+            </div>
+            <div class="section-4-1-3">
+                <img src="Flower Asset/Group 59.png" alt="">
+                <h5>24/7 Free Support.</h5>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
