--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
 
     </section>
 
+
+
+
+
+
+
+
+    <!-- footer section  -->
+    <footer>
+        <h2><span class="footer-orange">Flower </span> Shop</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ipsam dicta tenetur quas! Ipsum maxime
+            suscipit laudantium magni labore quae aperiam odit repudiandae corrupti! Doloribus nobis et id eos quae.</p>
+        <p class="p-2">@2024, FlowerShop.com. All rights reserved. </p>
+    </footer>
+
 </body>
 
 </html>
