--- a/index.html
+++ b/index.html
@@ -90,7 +90,16 @@
 
 
 
-
+    <!-- section-8 -->
+    <section class="section-8">
+        <h1>Get The Latest Deals</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum atque illo qui tempore error eligendi.
+            Tempore quo earum alias porro.</p>
+        <div class="section-8-1">
+            <input class="section-8-input" type="text" placeholder="Write your email">
+            <button class="section-8-btn-1">Subscribe</button>
+        </div>
+    </section>
 
 
     <!-- footer section  -->
