--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
     </section>
     <!-- section-5 -->
     <section class="section-5">
-
+        <h1>Instagram</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor voluptatibus harum consequuntur dignissimos
+            impedit tempore officia delectus est fugit, eos beatae quos autem, nobis amet commodi quidem facilis,
+            tenetur officiis.</p>
     </section>
 
 
