--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
             tenetur officiis.</p>
     </section>
 
+    <!-- section-6 -->
+    <section class="section-6">
+        <div class="section-6-1">
+            <img class="image-1" src="Flower Asset/Flower 01.png" alt="">
+            <img class="image-2" src="Flower Asset/Rectangle 4.png" alt="">
+            <img class="image-3" src="Flower Asset/Rectangle 5.png" alt="">
+            <img class="image-4" src="Flower Asset/Rectangle 6.png" alt="">
+        </div>
+    </section>
 
 
 
